--- a/study.ipynb
+++ b/study.ipynb
@@ -253,6 +253,160 @@
     "\n",
     "alembic upgrade head"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "cc32a3bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 데이터 넣기\n",
+    "\n",
+    "from models import Question, Answer\n",
+    "from datetime import datetime\n",
+    "from database import SessionLocal\n",
+    "\n",
+    "q = Question(subject='pybo가 무엇인가요?', content='pybo에 대해서 알고 싶습니다.', create_date=datetime.now())\n",
+    "db = SessionLocal()\n",
+    "db.add(q)\n",
+    "db.commit()\n",
+    "\n",
+    "q.id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "584d34ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q = Question(subject='FastAPI 모델 질문입니다.', content='id는 자동으로 생성되나요?', create_date=datetime.now())\n",
+    "db.add(q)\n",
+    "db.commit()\n",
+    "\n",
+    "q.id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "9fa8b979",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<models.Question at 0x113977750>, <models.Question at 0x1143c39d0>]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 데이터 조회하기\n",
+    "db.query(Question).all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "baf15635",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<models.Question at 0x113977750>]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# filter 함수 이용한 질문\n",
+    "db.query(Question).filter(Question.id == 1).all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "b06d9e83",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<models.Question at 0x113977750>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# id는 유일한 값이므로 get 함수를 이용해 조회할 수도 있음\n",
+    "db.get(Question, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "a126bd31",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<models.Question at 0x1143c39d0>]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Like 검색\n",
+    "db.query(Question).filter(Question.subject.like('%FastAPI%')).all()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d940d86",
+   "metadata": {},
+   "source": [
+    "- 데이터를 조회하는 다양한 사용법\n",
+    "https://docs.sqlalchemy.org/en/14/orm/query.html"
+   ]
   }
  ],
  "metadata": {
