--- a/study.ipynb
+++ b/study.ipynb
@@ -405,7 +405,29 @@
    "metadata": {},
    "source": [
     "- 데이터를 조회하는 다양한 사용법\n",
-    "https://docs.sqlalchemy.org/en/14/orm/query.html"
+    "- https://docs.sqlalchemy.org/en/14/orm/query.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "752e00e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 데이터 수정하기\n",
+    "q = db.get(Question, 2)\n",
+    "q.subject = 'FastAPI Model Question'\n",
+    "db.commit()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57778810",
+   "metadata": {},
+   "source": [
+    "- 다음 학습할 내용\n",
+    "- https://wikidocs.net/175970"
    ]
   }
  ],
