--- a/study.ipynb
+++ b/study.ipynb
@@ -256,7 +256,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
+   "id": "b0b0f661",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from models import Question, Answer\n",
+    "from datetime import datetime\n",
+    "from database import SessionLocal\n",
+    "\n",
+    "db = SessionLocal()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "cc32a3bb",
    "metadata": {},
    "outputs": [
@@ -266,20 +280,14 @@
        "1"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 데이터 넣기\n",
-    "\n",
-    "from models import Question, Answer\n",
-    "from datetime import datetime\n",
-    "from database import SessionLocal\n",
-    "\n",
     "q = Question(subject='pybo가 무엇인가요?', content='pybo에 대해서 알고 싶습니다.', create_date=datetime.now())\n",
-    "db = SessionLocal()\n",
     "db.add(q)\n",
     "db.commit()\n",
     "\n",
@@ -288,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "id": "584d34ef",
    "metadata": {},
    "outputs": [
@@ -298,7 +306,7 @@
        "2"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,17 +321,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "9fa8b979",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<models.Question at 0x113977750>, <models.Question at 0x1143c39d0>]"
+       "[<models.Question at 0x10e60a450>, <models.Question at 0x10da1ac40>]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,17 +343,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "baf15635",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<models.Question at 0x113977750>]"
+       "[<models.Question at 0x10e60a450>]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,17 +365,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "id": "b06d9e83",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<models.Question at 0x113977750>"
+       "<models.Question at 0x10e60a450>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,17 +387,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "id": "a126bd31",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<models.Question at 0x1143c39d0>]"
+       "[<models.Question at 0x10da1ac40>]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "id": "752e00e7",
    "metadata": {},
    "outputs": [],
@@ -422,12 +430,114 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "57778810",
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "db5d59ca",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "- 다음 학습할 내용\n",
-    "- https://wikidocs.net/175970"
+    "# 데이터 삭제하기\n",
+    "q = db.get(Question, 1)\n",
+    "db.delete(q)\n",
+    "db.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "bdbaab92",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<models.Question at 0x10da1ac40>]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db.query(Question).all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "7362493f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 답변 데이터 저장하기\n",
+    "q = db.get(Question, 2)\n",
+    "a = Answer(question=q, content='네 자동으로 생성됩니다.', create_date=datetime.now())\n",
+    "db.add(a)\n",
+    "db.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "4bc5312a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "329613cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<models.Question at 0x10da1ac40>"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.question"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "9d850998",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<models.Answer at 0x10da1a9e0>]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q.answers"
    ]
   }
  ],
