Fast API 의존성 주입

--- a/study.ipynb
+++ b/study.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "9d65f28b",
    "metadata": {},
    "outputs": [],
@@ -29,54 +29,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "a0724169",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:     Started server process [20589]\n",
-      "INFO:     Waiting for application startup.\n",
-      "INFO:     Application startup complete.\n",
-      "INFO:     Uvicorn running on http://127.0.0.1:8000 (Press CTRL+C to quit)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:     127.0.0.1:56097 - \"GET / HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:56097 - \"GET / HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:56097 - \"GET / HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:56097 - \"GET /docs HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:56099 - \"GET /openapi.json HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:56102 - \"GET / HTTP/1.1\" 200 OK\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:     Shutting down\n",
-      "INFO:     Waiting for application shutdown.\n",
-      "INFO:     Application shutdown complete.\n",
-      "INFO:     Finished server process [20589]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
-    "import uvicorn\n",
     "from fastapi import FastAPI\n",
     "\n",
     "app = FastAPI()\n",
     "\n",
     "@app.get(\"/\")\n",
     "def hello():\n",
-    "    return {\"message\": \"Hello World\"}\n",
-    "\n",
+    "    return {\"message\": \"Hello World\"}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "f31c7168",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:     Started server process [1594]\n",
+      "INFO:     Waiting for application startup.\n",
+      "INFO:     Application startup complete.\n",
+      "INFO:     Uvicorn running on http://127.0.0.1:8000 (Press CTRL+C to quit)\n",
+      "INFO:     Shutting down\n",
+      "INFO:     Waiting for application shutdown.\n",
+      "INFO:     Application shutdown complete.\n",
+      "INFO:     Finished server process [1594]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import uvicorn\n",
     "uvicorn.run(app)"
    ]
   },
@@ -538,6 +527,371 @@
    ],
    "source": [
     "q.answers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a53c85c1",
+   "metadata": {},
+   "source": [
+    "# 라우터\n",
+    "- FastAPI가 요청받은 URL을 해석하여 그에 맞는 함수를 실행하여 그 결과를 리턴하는 행위를 말합니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "ab70df6e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from fastapi import APIRouter\n",
+    "\n",
+    "from database import SessionLocal\n",
+    "from models import Question\n",
+    "\n",
+    "router = APIRouter(\n",
+    "    prefix=\"/api/question\",\n",
+    ")\n",
+    "\n",
+    "@router.get(\"/list\")\n",
+    "def question_list():\n",
+    "    db = SessionLocal()\n",
+    "    questions = db.query(Question).order_by(Question.create_date.desc()).all()\n",
+    "    db.close()\n",
+    "    return questions\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "22bd8a7e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from fastapi import FastAPI\n",
+    "from fastapi.middleware.cors import CORSMiddleware \n",
+    "from domain.question import question_router\n",
+    "\n",
+    "app = FastAPI()\n",
+    "\n",
+    "origins = [\n",
+    "    \"http://localhost:5173\",\n",
+    "]\n",
+    "\n",
+    "app.add_middleware(\n",
+    "    CORSMiddleware,\n",
+    "    allow_origins=origins,\n",
+    "    allow_credentials=True,\n",
+    "    allow_methods=[\"*\"],\n",
+    "    allow_headers=[\"*\"],\n",
+    ")\n",
+    "\n",
+    "app.include_router(question_router.router)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "1ee28eb2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:     Started server process [1594]\n",
+      "INFO:     Waiting for application startup.\n",
+      "INFO:     Application startup complete.\n",
+      "INFO:     Uvicorn running on http://127.0.0.1:8000 (Press CTRL+C to quit)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:     127.0.0.1:50376 - \"GET /docs HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:50376 - \"GET /openapi.json HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:50377 - \"GET / HTTP/1.1\" 404 Not Found\n",
+      "INFO:     127.0.0.1:50377 - \"GET /docs HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:50377 - \"GET /openapi.json HTTP/1.1\" 200 OK\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:     Shutting down\n",
+      "INFO:     Waiting for application shutdown.\n",
+      "INFO:     Application shutdown complete.\n",
+      "INFO:     Finished server process [1594]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import uvicorn\n",
+    "uvicorn.run(app)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "45dc34ed",
+   "metadata": {},
+   "source": [
+    "### 테스트\n",
+    "- http://127.0.0.1:8000/docs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d872fc7b",
+   "metadata": {},
+   "source": [
+    "# 의존성 주입\n",
+    "### 데이터베이스 세션의 생성과 반환을 자동화하기\n",
+    "- db세션 객체를 생성한 후에 db.close()를 수행하지 않으면 SQLAlchemy가 사용하는 커넥션 풀에 db세션이 반환되지 않아 문제가 생깁니다.\n",
+    "- 프로그래밍에서 의존성 주입의 뜻은 필요한 기능을 선언하여 사용할 수 있다는 의미입니다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e97f01e5",
+   "metadata": {},
+   "source": [
+    "## Contextmanager 사용"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "97d00aa7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import contextlib\n",
+    "\n",
+    "from sqlalchemy import create_engine\n",
+    "from sqlalchemy.orm import sessionmaker, declarative_base\n",
+    "\n",
+    "SQLALCHEMY_DATABASE_URL = \"sqlite:///./myapi.db\"\n",
+    "\n",
+    "engine = create_engine(\n",
+    "    SQLALCHEMY_DATABASE_URL, connect_args={\"check_same_thread\": False}\n",
+    ")\n",
+    "SessionLocal = sessionmaker(autocommit=False, autoflush=False, bind=engine)\n",
+    "\n",
+    "Base = declarative_base()\n",
+    "\n",
+    "@contextlib.contextmanager\n",
+    "def get_db():\n",
+    "    db = SessionLocal()\n",
+    "    try:\n",
+    "        yield db\n",
+    "    finally:\n",
+    "        db.close()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80359a80",
+   "metadata": {},
+   "source": [
+    "### 제너레이터란?\n",
+    "- https://wikidocs.net/134909"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "d8f4780c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from fastapi import APIRouter\n",
+    "\n",
+    "# from database import get_db\n",
+    "from models import Question\n",
+    "\n",
+    "router = APIRouter(\n",
+    "    prefix=\"/api/question\",\n",
+    ")\n",
+    "\n",
+    "@router.get(\"/list\")\n",
+    "def question_list():\n",
+    "    with get_db() as db:\n",
+    "        questions = db.query(Question).order_by(Question.create_date.desc()).all()            \n",
+    "    return questions\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "f5c8a3a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:     Started server process [1594]\n",
+      "INFO:     Waiting for application startup.\n",
+      "INFO:     Application startup complete.\n",
+      "INFO:     Uvicorn running on http://127.0.0.1:8000 (Press CTRL+C to quit)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:     127.0.0.1:50639 - \"GET /docs HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:50639 - \"GET /openapi.json HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:50639 - \"GET /api/question/list HTTP/1.1\" 200 OK\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:     Shutting down\n",
+      "INFO:     Waiting for application shutdown.\n",
+      "INFO:     Application shutdown complete.\n",
+      "INFO:     Finished server process [1594]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import uvicorn\n",
+    "uvicorn.run(app)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c379811d",
+   "metadata": {},
+   "source": [
+    "### 테스트\n",
+    "- http://127.0.0.1:8000/docs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ea270a2",
+   "metadata": {},
+   "source": [
+    "### Depends 사용하기\n",
+    "- FastAPI의 Depends를 사용하면 with문을 사용하는 것 보다 더 간단하게 사용할 수 있습니다.\n",
+    "- FastAPI는 제네레이터 기반 함수를 직접 지원하며, 자동으로 리소스 관리를 처리합니다.\n",
+    "- @contextlib.contextmanager를 사용하면 get_db 함수가 context_GeneratorContextManager 객체를 반환하게 되어 종속성 주입이 제대로 동작하지 않습니다.\n",
+    "- 어노테이션을 제거해야 합니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "0d91b556",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sqlalchemy import create_engine\n",
+    "from sqlalchemy.orm import sessionmaker, declarative_base\n",
+    "\n",
+    "SQLALCHEMY_DATABASE_URL = \"sqlite:///./myapi.db\"\n",
+    "\n",
+    "engine = create_engine(\n",
+    "    SQLALCHEMY_DATABASE_URL, connect_args={\"check_same_thread\": False}\n",
+    ")\n",
+    "SessionLocal = sessionmaker(autocommit=False, autoflush=False, bind=engine)\n",
+    "\n",
+    "Base = declarative_base()\n",
+    "\n",
+    "def get_db():\n",
+    "    db = SessionLocal()\n",
+    "    try:\n",
+    "        yield db\n",
+    "    finally:\n",
+    "        db.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "49ab47b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from fastapi import APIRouter, Depends\n",
+    "from sqlalchemy.orm import Session\n",
+    "\n",
+    "# from database import get_db\n",
+    "from models import Question\n",
+    "\n",
+    "router = APIRouter(\n",
+    "    prefix=\"/api/question\",\n",
+    ")\n",
+    "\n",
+    "@router.get(\"/list\")\n",
+    "def question_list(db: Session = Depends(get_db)):\n",
+    "    questions = db.query(Question).order_by(Question.create_date.desc()).all()            \n",
+    "    return questions\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43742450",
+   "metadata": {},
+   "source": [
+    "### 파이썬 타입 어노테이션\n",
+    "- https://wikidocs.net/134883"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "ae7fe004",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:     Started server process [1594]\n",
+      "INFO:     Waiting for application startup.\n",
+      "INFO:     Application startup complete.\n",
+      "INFO:     Uvicorn running on http://127.0.0.1:8000 (Press CTRL+C to quit)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:     127.0.0.1:50712 - \"GET /docs HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:50712 - \"GET /openapi.json HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:50712 - \"GET /api/question/list HTTP/1.1\" 200 OK\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:     Shutting down\n",
+      "INFO:     Waiting for application shutdown.\n",
+      "INFO:     Application shutdown complete.\n",
+      "INFO:     Finished server process [1594]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import uvicorn\n",
+    "uvicorn.run(app)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80f91110",
+   "metadata": {},
+   "source": [
+    "### 테스트\n",
+    "- http://127.0.0.1:8000/docs"
    ]
   }
  ],
