FastAPI CRUD 추가

--- a/study.ipynb
+++ b/study.ipynb
@@ -893,6 +893,150 @@
     "### 테스트\n",
     "- http://127.0.0.1:8000/docs"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b9b379c",
+   "metadata": {},
+   "source": [
+    "# 스키마 (Pydantic)\n",
+    "- 모든 항목이 출력으로 리턴되지만 외부로 공개되면 안되는 출력항목이 있을 수 있습니다.\n",
+    "- 출력값이 정확한지 검증하고 싶을 수도 있습니다.\n",
+    "\n",
+    "- 입출력 항목의 갯수와 타입을 설정\n",
+    "- 입출력 항목의 필수값 체크\n",
+    "- 입출력 항목의 데이터 검증"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "7ac7b800",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime\n",
+    "from pydantic import BaseModel\n",
+    "\n",
+    "class Question(BaseModel):\n",
+    "    id: int\n",
+    "    subject: str\n",
+    "    content: str\n",
+    "    create_date: datetime.datetime\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "58be7931",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from fastapi import APIRouter, Depends\n",
+    "from sqlalchemy.orm import Session\n",
+    "\n",
+    "#from database import get_db\n",
+    "from domain.question import question_schema\n",
+    "from models import Question\n",
+    "\n",
+    "router = APIRouter(\n",
+    "    prefix=\"/api/question\",\n",
+    ")\n",
+    "\n",
+    "@router.get(\"/list\", response_model=list[question_schema.Question])\n",
+    "def question_list(db: Session = Depends(get_db)):\n",
+    "    questions = db.query(Question).order_by(Question.create_date.desc()).all()            \n",
+    "    return questions\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "a1fdbbf6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from models import Question\n",
+    "from sqlalchemy.orm import Session\n",
+    "\n",
+    "def get_question_list(db: Session):\n",
+    "    question_list = db.query(Question).order_by(Question.create_date.desc()).all()\n",
+    "    return question_list        \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "8a37c9dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from fastapi import APIRouter, Depends\n",
+    "from sqlalchemy.orm import Session\n",
+    "\n",
+    "# from database import get_db\n",
+    "from domain.question import question_schema, question_crud\n",
+    "\n",
+    "router = APIRouter(\n",
+    "    prefix=\"/api/question\",\n",
+    ")\n",
+    "\n",
+    "@router.get(\"/list\", response_model=list[question_schema.Question])\n",
+    "def question_list(db: Session = Depends(get_db)):\n",
+    "    questions = question_crud.get_question_list(db)            \n",
+    "    return questions\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "a456b8f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:     Started server process [1594]\n",
+      "INFO:     Waiting for application startup.\n",
+      "INFO:     Application startup complete.\n",
+      "INFO:     Uvicorn running on http://127.0.0.1:8000 (Press CTRL+C to quit)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:     127.0.0.1:51157 - \"GET /docs HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:51157 - \"GET /openapi.json HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:51157 - \"GET /api/question/list HTTP/1.1\" 200 OK\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:     Shutting down\n",
+      "INFO:     Waiting for application shutdown.\n",
+      "INFO:     Application shutdown complete.\n",
+      "INFO:     Finished server process [1594]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import uvicorn\n",
+    "uvicorn.run(app)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6ecf8de",
+   "metadata": {},
+   "source": [
+    "### 테스트\n",
+    "- http://127.0.0.1:8000/docs"
+   ]
   }
  ],
  "metadata": {
