Svelte 프로젝트 추가

--- a/study.ipynb
+++ b/study.ipynb
@@ -1037,6 +1037,119 @@
     "### 테스트\n",
     "- http://127.0.0.1:8000/docs"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06573ed0",
+   "metadata": {},
+   "source": [
+    "# SVELTE\n",
+    "- https://svelte.dev\n",
+    "\n",
+    "- node.js 설치\n",
+    "\n",
+    "- svelte project \n",
+    "```shell\n",
+    "npm create vite@latest frontend -- --template svelte\n",
+    "cd ./frontend\n",
+    "npm install\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d44f30f1",
+   "metadata": {},
+   "source": [
+    "- 자바스크립트 타입 체크 설정 끄기  \n",
+    "스펠트는 자바스크립트 타입을 체크하는 것이 디폴트로 설정되어 있습니다.  \n",
+    "타입스크립트를 사용하지 않으면 해당 설정을 끄고 진행하도록 합니다.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c376f21d",
+   "metadata": {},
+   "source": [
+    "```json\n",
+    "{\n",
+    "  \"compilerOptions\": {    \n",
+    "    /**\n",
+    "     * Typecheck JS in `.svelte` and `.js` files by default.\n",
+    "     * Disable this if you'd like to use dynamic types.\n",
+    "     */\n",
+    "    \"checkJs\": false\n",
+    "  },  \n",
+    "}\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f57b78ce",
+   "metadata": {},
+   "source": [
+    "# svelte 서버 실행\n",
+    "\n",
+    "```shell\n",
+    "npm run dev\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1098abd",
+   "metadata": {},
+   "source": [
+    "### 프론트엔드 서버가 필요한 이유\n",
+    "- Svelte로 작성한 코드를 실시간으로 테스트 하려면, 브라우저가 인식할 수 있는 HTML, CSS, JS로 실시간 변환해주는 기능이 필요합니다.\n",
+    "- 코드를 빌드하면 순수 HTML/CSS/JS가 만들어지므로 FastAPI서버에 정적 파일 형태로 배포하면 되므로, Node.js 서버가 필요 없습니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5458e88b",
+   "metadata": {
+    "vscode": {
+     "languageId": "html"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "<script>\n",
+    "  let question_list = [];\n",
+    "\n",
+    "  async function get_question_list() {\n",
+    "    const response = await fetch('http://127.0.0.1:8000/api/question/list')\n",
+    "    if (response.ok) {\n",
+    "      const data = await response.json();\n",
+    "      question_list = data;\n",
+    "    } else {\n",
+    "      console.error('Failed to fetch question list');\n",
+    "    }      \n",
+    "  }\n",
+    "\n",
+    "  get_question_list();\n",
+    "\n",
+    "</script>\n",
+    "\n",
+    "<ul>\n",
+    "  {#each question_list as question}\n",
+    "    <li>{question.subject}</li>\n",
+    "  {/each}\n",
+    "</ul>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "523a40af",
+   "metadata": {},
+   "source": [
+    "- question_list를 최초 빈 리스트인 []으로 초기값을 주지 않을 경우 비동기인 fetch함수가 요청하는 중에 HTML영역의 each문이 실행되고 question_list에 값이 없어 오류가 발생합니다.\n",
+    "- 반복문과 함께 사용할 경우 해당 값을 빈 리스트로 초기화 하는 것이 좋습니다.\n",
+    "- Svelte 특징중 하나 \"Truly reactive\""
+   ]
   }
  ],
  "metadata": {
