--- a/study.ipynb
+++ b/study.ipynb
@@ -1150,6 +1150,82 @@
     "- 반복문과 함께 사용할 경우 해당 값을 빈 리스트로 초기화 하는 것이 좋습니다.\n",
     "- Svelte 특징중 하나 \"Truly reactive\""
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15e7e946",
+   "metadata": {},
+   "source": [
+    "# Svelte 필수 문법\n",
+    "## 분기문\n",
+    "```svelte\n",
+    "{#if 조건문1}\n",
+    "    <p>조건문1에 해당하면 실행</p>\n",
+    "{:else if 조건문2}\n",
+    "    <p>조건문2에 해당하면 실행</p>\n",
+    "{:else}\n",
+    "    <p>조건문1, 2 모두 해당하지 않으면 실행</p>\n",
+    "{/if}\n",
+    "```\n",
+    "\n",
+    "## 반복문\n",
+    "```svelte\n",
+    "{#each list as item, index}\n",
+    "    <p>순서: {index} </p>\n",
+    "    <p>{item}</p>\n",
+    "{/each}\n",
+    "```\n",
+    "\n",
+    "## 객체표시\n",
+    "```svelte\n",
+    "{객체}\n",
+    "{객체.속성}\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b115369a",
+   "metadata": {},
+   "source": [
+    "- svelte SPA를 구현할때 svelte-spa-router를 사용하면 됩니다.\n",
+    "- svelte-spa-router는 Svelte로 작성된 싱글 페이지 애플리케이션(SPA)을 위한 라우터 라이브러리입니다. React Router나 Vue Router와 유사한 기능을 하며, URL 경로에 따라 다른 Svelte 컴포넌트를 렌더링하도록 도와줍니다.\n",
+    "- https://github.com/ItalyPaleAle/svelte-spa-router"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "147b1792",
+   "metadata": {},
+   "source": [
+    "- 설치\n",
+    "```bash\n",
+    "npm install svelte-spa-router\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d30f4bac",
+   "metadata": {},
+   "source": [
+    "- 라우터 설정(예)\n",
+    "```svelte\n",
+    "<!-- App.svelte -->\n",
+    "<script>\n",
+    "  import Router from 'svelte-spa-router';\n",
+    "  import Home from './routes/Home.svelte';\n",
+    "  import About from './routes/About.svelte';\n",
+    "\n",
+    "  const routes = {\n",
+    "    '/': Home,\n",
+    "    '/about': About\n",
+    "  };\n",
+    "</script>\n",
+    "\n",
+    "<Router {routes} />\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
