질문 상세 화면 만들기

--- a/study.ipynb
+++ b/study.ipynb
@@ -1226,6 +1226,64 @@
     "<Router {routes} />\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f47df9ef",
+   "metadata": {},
+   "source": [
+    "# 질문 상세 링크 추가하기\n",
+    "- a 태그에 use:link 속성을 사용하기 위해 link를 import를 했습니다.\n",
+    "```svelte\n",
+    "<script>\n",
+    "    import fastapi from \"../lib/api\"\n",
+    "    import { link } from 'svelte-spa-router'\n",
+    "\n",
+    "    let question_list = []\n",
+    "\n",
+    "    fastapi('get', '/api/question/list', {}, (json) => {\n",
+    "        question_list = json\n",
+    "    })\n",
+    "</script>\n",
+    "\n",
+    "<ul>\n",
+    "    {#each question_list as question}\n",
+    "        <li><a use:link href=\"/detail/{question.id}\">{question.subject}</a></li>\n",
+    "    {/each}\n",
+    "</ul>\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c434a64",
+   "metadata": {},
+   "source": [
+    "## a 태그에 use:link를 사용하는 이유\n",
+    "- a 태그를 사용하는 일반적인 방법은 다음과 같습니다.\n",
+    "```html\n",
+    "<a href=\"/some-path\">Some Path</a>\n",
+    "```\n",
+    "- 위와 같은 링크를 클릭하면 브라우저 주소창에 다음과 같이 표시됩니다.\n",
+    "```\n",
+    "http://127.0.0.1:5173/some-path\n",
+    "```\n",
+    "- 이번에는 다음처럼 a 태그에 use:link를 사용해봅니다.\n",
+    "```html\n",
+    "<a use:link href=\"/some-path\">Some Path</a>\n",
+    "```\n",
+    "```\n",
+    "http://127.0.0.1:5173/#/some-path\n",
+    "```\n",
+    "- use:link속성을 사용하면 항상 /# 문자가 선행되도록 경로가 만들어집니다.\n",
+    "- 웹 페이지에서 어떤 경로가 /#으로 시작하면 브라우저는 이 경로를 하나의 페이지로 인식합니다.\n",
+    "- 즉 브라우저는 http://127.0.0.1:5173/#/a, http://127.0.0.1:5173/#/b 두개의 경로를 모두 동일한 페이지로 인식한다는 점입니다.\n",
+    "- 이러한 것을 해시 기반 라우팅이라고 합니다.\n",
+    "\n",
+    "## 왜 해시 기반 라우팅을 사용하는 것을까요?\n",
+    "- /# 으로 시작할 경우 서버로 요청 보내지 않습니다. \n",
+    "- 만약 클라이언트에만 존재하는 라우팅 주소는 서버에 없기 때문에 404 NotFound 오류가 발생하지 않습니다."
+   ]
   }
  ],
  "metadata": {
