--- a/study.ipynb
+++ b/study.ipynb
@@ -1284,6 +1284,108 @@
     "- /# 으로 시작할 경우 서버로 요청 보내지 않습니다. \n",
     "- 만약 클라이언트에만 존재하는 라우팅 주소는 서버에 없기 때문에 404 NotFound 오류가 발생하지 않습니다."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57cea803",
+   "metadata": {},
+   "source": [
+    "###  FastAPI 스키마 작성시 검증"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "3d6cd0c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValidationError",
+     "evalue": "1 validation error for AnswerCreate\ncontent\n  Value error, 빈 값은 허용되지 않습니다. [type=value_error, input_value=' ', input_type=str]\n    For further information visit https://errors.pydantic.dev/2.11/v/value_error",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValidationError\u001b[39m                           Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 12\u001b[39m\n\u001b[32m      9\u001b[39m             \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33m'\u001b[39m\u001b[33m빈 값은 허용되지 않습니다.\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m     10\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m v\n\u001b[32m---> \u001b[39m\u001b[32m12\u001b[39m answer = \u001b[43mAnswerCreate\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcontent\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43m \u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/study/fastapi_study/.venv/lib/python3.13/site-packages/pydantic/main.py:253\u001b[39m, in \u001b[36mBaseModel.__init__\u001b[39m\u001b[34m(self, **data)\u001b[39m\n\u001b[32m    251\u001b[39m \u001b[38;5;66;03m# `__tracebackhide__` tells pytest and some other tools to omit this function from tracebacks\u001b[39;00m\n\u001b[32m    252\u001b[39m __tracebackhide__ = \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m253\u001b[39m validated_self = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m__pydantic_validator__\u001b[49m\u001b[43m.\u001b[49m\u001b[43mvalidate_python\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mself_instance\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m    254\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m validated_self:\n\u001b[32m    255\u001b[39m     warnings.warn(\n\u001b[32m    256\u001b[39m         \u001b[33m'\u001b[39m\u001b[33mA custom validator is returning a value other than `self`.\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m'\u001b[39m\n\u001b[32m    257\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mReturning anything other than `self` from a top level model validator isn\u001b[39m\u001b[33m'\u001b[39m\u001b[33mt supported when validating via `__init__`.\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m\"\u001b[39m\n\u001b[32m    258\u001b[39m         \u001b[33m'\u001b[39m\u001b[33mSee the `model_validator` docs (https://docs.pydantic.dev/latest/concepts/validators/#model-validators) for more details.\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m    259\u001b[39m         stacklevel=\u001b[32m2\u001b[39m,\n\u001b[32m    260\u001b[39m     )\n",
+      "\u001b[31mValidationError\u001b[39m: 1 validation error for AnswerCreate\ncontent\n  Value error, 빈 값은 허용되지 않습니다. [type=value_error, input_value=' ', input_type=str]\n    For further information visit https://errors.pydantic.dev/2.11/v/value_error"
+     ]
+    }
+   ],
+   "source": [
+    "from pydantic import BaseModel, field_validator\n",
+    "\n",
+    "class AnswerCreate(BaseModel):\n",
+    "    content: str\n",
+    "\n",
+    "    @field_validator('content')\n",
+    "    def not_empty(cls, v):\n",
+    "        if not v or not v.strip():\n",
+    "            raise ValueError('빈 값은 허용되지 않습니다.')\n",
+    "        return v\n",
+    "\n",
+    "answer = AnswerCreate(content=' ')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b24a607",
+   "metadata": {},
+   "source": [
+    "### 입력 항목을 처리하는 스키마는 왜 필요할까?\n",
+    "- 답변 등록 API는 post방식이고 content라는 입력항목이 있습니다.\n",
+    "- 답변 등록 라우터에서 content 값을 읽기 위해서는 반드시 content항목을 포함하는 Pydantic 스키마를 통해 읽어야 합니다.\n",
+    "- get방식은 각각의 입력항목을 라우터 함수의 매개변수로 읽어야 하고, 그 외에는 Pydantic 스키마로만 읽어야 합니다.\n",
+    "- HTTP 프로토콜의 URL에 포함된 입력 값(URL parameter)은 라우터의 스키마가 아닌 매개변수로 읽는다. (Path Parameter, Query Parameter)\n",
+    "- HTTP 프로토콜의 Body에 포함된 입력 값(payload)은 Pydantic 스키마로 읽는다. (Request Body)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89922bb7",
+   "metadata": {},
+   "source": [
+    "- 출력은 response_model을 사용하는 대신 status_code=status.HTTP_204_NO_CONTENT 를 사용했다. 이렇게 리턴할 응답이 없을 경우에는 응답코드 204를 리턴하여 \"응답 없음\"을 나타낼 수 있다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c729acb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from fastapi import APIRouter, Depends, HTTPException\n",
+    "from sqlalchemy.orm import Session\n",
+    "from starlette import status\n",
+    "\n",
+    "from database import get_db\n",
+    "from domain.answer import answer_schema, answer_crud\n",
+    "from domain.question import question_crud\n",
+    "\n",
+    "router = APIRouter(\n",
+    "    prefix=\"/api/answer\",\n",
+    ")\n",
+    "\n",
+    "# 출력은 response_model을 사용하는 대신 status_code=status.HTTP_204_NO_CONTENT 를 사용했다. 이렇게 리턴할 응답이 없을 경우에는 응답코드 204를 리턴하여 \"응답 없음\"을 나타낼 수 있다.\n",
+    "@router.post(\"/create/{question_id}\", status_code=status.HTTP_204_NO_CONTENT)\n",
+    "def answer_create(question_id: int,\n",
+    "                  _answer_create: answer_schema.AnswerCreate,\n",
+    "                  db: Session = Depends(get_db)):\n",
+    "    question = question_crud.get_question(db, question_id)\n",
+    "    if not question:\n",
+    "        raise HTTPException(status_code=status.HTTP_404_NOT_FOUND,\n",
+    "                            detail=\"질문이 존재하지 않습니다.\")\n",
+    "    answer_crud.create_answer(db, question, _answer_create)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3fb4a891",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
