--- a/study.ipynb
+++ b/study.ipynb
@@ -1385,7 +1385,29 @@
    "cell_type": "markdown",
    "id": "3fb4a891",
    "metadata": {},
-   "source": []
+   "source": [
+    "## 스벨트 스토어\n",
+    "- 스벨트 스토어를 사용하면 변수 값을 전역적으로 저장할 수 있기 때문에 라우팅 되는 페이지에 상관없이 스토어에 저장된 변수를 사용할수 있습니다.\n",
+    "- 스토어 변수는 사용시 앞에 $을 붙여야 합니다.\n",
+    "- page -> $page"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c374d27",
+   "metadata": {},
+   "source": [
+    "## 지속성 스토어(persistant store)\n",
+    "- localStorage를 사용하여 지속성을 지니게 합니다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "810b8044",
+   "metadata": {},
+   "source": [
+    "- $: get_question_list($page)의 의미는 page 값이 변경될 경우 get_question_list 함수도 다시 호출하라는 의미입니다."
+   ]
   }
  ],
  "metadata": {
